fix(core): hide placeholder without visible overflow (#1551)

--- a/projects/core/components/primitive-textfield/primitive-textfield.style.less
+++ b/projects/core/components/primitive-textfield/primitive-textfield.style.less
@@ -96,3 +96,8 @@
 .t-text-template {
     .text-overflow();
 }
+
+.t-wrapper-value-decoration {
+    position: relative;
+    pointer-events: none;
+}
